<resources>
    <string name="app_name">ICorrect</string>
    <string name="action_settings">Settings</string>
    <string name="app_home">Home</string>
    <string name="tutorials">Tutorials</string>
    <string name="default_name">Unknown User</string>
    <string name="not_log_in">You are not logged in!</string>
    <string name="comunity_sharing">Comunity Sharing</string>
    <string name="practice">Practice</string>
    <string name="my_order">My Order</string>
    <string name="my_practice">My practice</string>
    <string name="free_coin">Free Coin</string>
    <string name="app_about">About Us</string>
    <string name="app_tutorials">Tutorials</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More Apps</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="other_action">Others</string>
    <string name="sign_out">Sign Out</string>
    <string name="speaking_practice">Speaking Practice</string>
    <string name="about_me">About Me</string>
</resources>
